# Tartocitron

./: .gitignore  README.md  meterpreter.rc
4-2-4_simple_injector/: Cargo.toml  README.md
4-2-4_simple_injector/src/: main.rs
4-2-5_simple_injector_dll/: Cargo.toml  README.md
4-2-5_simple_injector_dll/src/: lib.rs
5-1-2_process_injection/: Cargo.toml  README.md
5-1-2_process_injection/src/: main.rs
5-1-2_process_injection_nt/: Cargo.toml  README.md
5-1-2_process_injection_nt/src/: main.rs
DInvoke/: readme.md
DInvoke/CreateRemoteThread/: Cargo.toml  readme.md
DInvoke/CreateRemoteThread/data/src/: lib.rs
DInvoke/CreateRemoteThread/src/: main.rs
DInvoke/QueueUserAPC/: .gitignore  Cargo.toml  readme.md
DInvoke/QueueUserAPC/data/src/: lib.rs
DInvoke/QueueUserAPC/manualmap/src/: lib.rs
DInvoke/QueueUserAPC/src/: main.rs
Obfuscation/aes_encryption_decryption/: Cargo.toml
Obfuscation/aes_encryption_decryption/src/: main.rs
PInvoke/: readme.md
PInvoke/CreateRemoteThread/: Cargo.toml  README.md
PInvoke/CreateRemoteThread/src/: main.rs
PInvoke/CreateThread/: Cargo.toml  README.md
PInvoke/CreateThread/src/: main.rs
PInvoke/CreateThread_dll/: README.md
PInvoke/CreateThread_dll/src/: lib.rs
PInvoke/QueueUserAPC/: Cargo.toml
PInvoke/QueueUserAPC/src/: main.rs
