[package]
name = "process_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.14.5"
kernel32-sys = "0.2.2"
winapi = {version = "0.3.9", features = ["winnt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"