[package]
name = "process_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.14.5"

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security"
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"