[package]
name = "dinvoke_rs"
version = "0.1.0"
edition = "2018"

[profile.dev.package.dinvoke_rs]
opt-level = 3
debug = 0

[dependencies]
dinvoke = { path = "dinvoke" }
manualmap = { path = "manualmap" }
bindings = { path = "bindings" }
data = { path = "data" }
overload = { path = "overload" }
dmanager = { path = "dmanager" }
random-string = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
libaes = "0.6"
itertools = "0.10"
sysinfo = "0.23.11"
litcrypt = "0.3"
remoteprocess = "0.4.9"

[dependencies.windows]
version = "0.37"
features = [
    "Win32_UI_Input_Pointer",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_Input_Pointer",
]