[package]
name = "apcqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-string = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
libaes = "0.6"
itertools = "0.10"
sysinfo = "0.23.11"
remoteprocess = "0.4.9"

[dependencies.windows]
version = "0.37"
features = [
    "Win32_UI_Input_Pointer",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_Input_Pointer",
]